# QMANET-Simulator

./: .gitignore  README.md  abstract form (1).docx
backend/: pyproject.toml
backend/api/: __init__.py  models.py  server.py
backend/aquila/: __init__.py  braket_adapter.py  constants.py  hamiltonian.py  noise.py  validator.py
backend/pipeline/: __init__.py  adiabatic_gap.py  classical_sa.py  clique_to_mis.py  embedding.py  manet.py  measurement.py  phase_diagram.py  postprocess.py  routing.py  schedule.py  simulate.py
backend/tests/: conftest.py  test_adiabatic_gap.py  test_api.py  test_braket_adapter.py  test_braket_api.py  test_braket_dry_run.py  test_classical_sa.py  test_clique_to_mis.py  test_constants.py  test_e2e_pipeline.py  test_edge_cases.py  test_embed_api.py  test_embedding.py  test_hamiltonian.py  test_measurement.py  test_noise.py  test_phase5_api.py  test_phase_diagram.py  test_postprocess.py  test_routing.py  test_routing_api.py  test_schedule.py  test_schedule_api.py  test_schema_contract.py  test_simulate.py  test_simulate_api.py  test_validator.py
docs/: reproduce_paper.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: rest.test.ts  rest.ts  ws.test.ts  ws.ts
frontend/src/components/: AtomArray2D.test.tsx  AtomArray2D.tsx  BitstringEvolutionHeatmap.tsx  BitstringHistogram.test.tsx  BitstringHistogram.tsx  BraketPanel.test.tsx  BraketPanel.tsx  ConstraintBadge.test.tsx  ConstraintBadge.tsx  EvolutionPlot.test.tsx  Panel.tsx  (+28 more)
(+32 files in other folders)
