[project]
name = "qsimulator-backend"
version = "0.1.0"
description = "Backend for Qsimulator — neutral-atom MANET routing simulator"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "websockets>=13",
    "numpy>=1.26,<2.1",
    "scipy>=1.13",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "bloqade-analog>=0.16",
    "qutip>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
braket = [
    "amazon-braket-sdk>=1.88",
    "boto3>=1.35",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "datamodel-code-generator>=0.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aquila*", "pipeline*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
